Update wordpress css and js

--- a/design/src/scss/main.scss
+++ b/design/src/scss/main.scss
@@ -27,5 +27,6 @@ body {
 //---------------------------------------------
 
 // @import "components/slider";
+@import "components/wordpress";
 @import "components/icomoon";
 @import "components/hamburgers";
