Update to version 1.0.0

--- a/.design/src/scss/_variables.scss
+++ b/.design/src/scss/_variables.scss
@@ -10,14 +10,7 @@
 //---------------------------------------------
 
 //---------------------------------------------
-// 1. Bootstrap Fonts
-//---------------------------------------------
-
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;600;700&display=swap');
-$font-family-base: 'Noto Sans JP', sans-serif;
-
-//---------------------------------------------
-// 2. Bootstrap Globals
+// Bootstrap Globals
 //---------------------------------------------
 
 $enable-rounded: true;
@@ -25,10 +18,9 @@ $enable-shadows: false;
 $enable-gradients: false;
 
 //---------------------------------------------
-// 3. Bootstrap Colors
+// Bootstrap Colors
 //---------------------------------------------
 
-$body-color: #000000; // The default text color
 $white:    #fff !default;
 $black:    #000 !default;
 
@@ -68,6 +60,8 @@ $colors: (
   "secondary":  $secondary,
   "light":      $light,
   "gray":       $gray-600,
+  "gray-100":   $gray-100,
+  "gray-200":   $gray-200,
   "gray-300":   $gray-300,
   "gray-400":   $gray-400,
   "gray-500":   $gray-500,
@@ -80,15 +74,19 @@ $theme-colors: (
   "secondary":  $secondary,
   "light":      $light,
   "dark":       $dark,
+  "gray-100":   $gray-100,
+  "gray-200":   $gray-200,
   "gray-300":   $gray-300,
   "gray-400":   $gray-400,
   "gray-500":   $gray-500,
   "gray-600":   $gray-600,
   "gray-700":   $gray-700,
 ) !default;
-  
+
+$body-color: $gray-700; // The default text color
+
 //---------------------------------------------
-// 4. Bootstrap Container Width
+// Bootstrap Container Width
 //---------------------------------------------
 
 $container-max-widths: (
@@ -100,7 +98,7 @@ $container-max-widths: (
 );
 
 //---------------------------------------------
-// 5. Bootstrap Font Sizes
+// Bootstrap Font Sizes
 //---------------------------------------------
 
 $h1-font-size:                1.5rem !default;
@@ -125,7 +123,7 @@ $lead-font-weight:       300 !default;
 $headings-line-height:   1.5 !default;
 
 //---------------------------------------------
-// 6. Bootstrap etc...
+// Bootstrap etc...
 //---------------------------------------------
 
 $list-group-color:                  $gray-600 !default;
