--- a/.design/src/scss/main.scss
+++ b/.design/src/scss/main.scss
@@ -12,6 +12,9 @@
 // 1. Basics
 //---------------------------------------------
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;600;700&display=swap');
+$font-family-base: 'Noto Sans JP', sans-serif;
+
 @import "variables";
 @import "bootstrap";
 
