--- a/.design/src/scss/components/hamburgers.scss
+++ b/.design/src/scss/components/hamburgers.scss
@@ -1,3 +1,3 @@
 
-$hamburger-layer-color: $gray-700 !default;
+$hamburger-layer-color: $light !default;
 @import "../../../node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
